results/classifier/118/mistranslation-arm/2770
mistranslation: 0.995
arm: 0.937
device: 0.853
files: 0.842
network: 0.713
graphic: 0.708
semantic: 0.701
TCG: 0.691
PID: 0.678
vnc: 0.670
VMM: 0.593
kernel: 0.592
ppc: 0.583
KVM: 0.531
risc-v: 0.490
socket: 0.485
debug: 0.370
i386: 0.366
hypervisor: 0.357
boot: 0.356
x86: 0.355
architecture: 0.297
peripherals: 0.239
register: 0.212
permissions: 0.190
performance: 0.151
user-level: 0.145
virtual: 0.134
assembly: 0.131
--------------------
arm: 0.986
files: 0.140
TCG: 0.113
debug: 0.086
VMM: 0.047
device: 0.033
kernel: 0.026
risc-v: 0.022
virtual: 0.022
register: 0.012
semantic: 0.011
network: 0.010
assembly: 0.008
peripherals: 0.008
PID: 0.007
KVM: 0.007
hypervisor: 0.005
user-level: 0.004
socket: 0.004
boot: 0.003
architecture: 0.002
ppc: 0.002
performance: 0.002
vnc: 0.002
graphic: 0.001
x86: 0.001
permissions: 0.001
i386: 0.001
mistranslation: 0.000

Build failure due to missing  keyctl_pkey_encrypt
Description of problem:

Steps to reproduce:
1. git checkout v7.2.0
2. ./configure --target-list=arm-softmmu;make
3. ../backends/cryptodev-lkcf.c: In function ‘cryptodev_lkcf_execute_task’:
../backends/cryptodev-lkcf.c:358:19: error: implicit declaration of function ‘keyctl_pkey_encrypt’; did you mean ‘keyctl_reject’? [-Werror=implicit-function-declaration]
             ret = keyctl_pkey_encrypt(key_id, op_desc,
                   ^~~~~~~~~~~~~~~~~~~
                   keyctl_reject
../backends/cryptodev-lkcf.c:358:19: error: nested extern declaration of ‘keyctl_pkey_encrypt’ [-Werror=nested-externs]
Additional information:

